--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Source sans pro font */
+/* font-family: 'Source Sans Pro', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+/* OCRA Extended font */
+@font-face {
+  font-family: 'OCRAExtended';
+  src: url(./assets/fonts/OCRAExtended.TTF) format('truetype');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+  html {
+    font-family: 'Source Sans Pro', sans-serif;
+  }
+	.hero-dark {
+		-webkit-filter: drop-shadow(3px 3px 0 #ffcc00)
+                drop-shadow(-3px 3px 0 #ffcc00)
+                drop-shadow(3px -3px 0 #ffcc00)
+                drop-shadow(-3px -3px 0 #ffcc00);
+		filter: drop-shadow(3px 3px 0 #ffcc00)
+        drop-shadow(-3px 3px 0 #ffcc00)
+        drop-shadow(3px -3px 0 #ffcc00)
+        drop-shadow(-3px -3px 0 #ffcc00);
+	}
+	.hero-light {
+		-webkit-filter: drop-shadow(3px 3px 0 #ff8100)
+                drop-shadow(-3px 3px 0 #ff8100)
+                drop-shadow(3px -3px 0 #ff8100)
+                drop-shadow(-3px -3px 0 #ff8100);
+		filter: drop-shadow(3px 3px 0 #ff8100)
+        drop-shadow(-3px 3px 0 #ff8100)
+        drop-shadow(3px -3px 0 #ff8100)
+        drop-shadow(-3px -3px 0 #ff8100);
+	}
+	h5.text-code {
+		-moz-transform: skew(-10deg, 30deg);
+		-webkit-transform: skew(-10deg, 30deg);
+		-o-transform: skew(-10deg, 30deg);
+		-ms-transform: skew(-10deg, 30deg);
+		transform: skew(-10deg, 30deg);
+	}
+
+	.rotating {
+		-webkit-animation: rotating 10s linear infinite;
+		-moz-animation: rotating 10s linear infinite;
+		-ms-animation: rotating 10s linear infinite;
+		-o-animation: rotating 10s linear infinite;
+		animation: rotating 10s linear infinite;
+	}
+
+	@-webkit-keyframes rotating /* Safari and Chrome */ {
+		from {
+			-webkit-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		to {
+			-webkit-transform: rotate(360deg);
+			-o-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
+	@keyframes rotating {
+		from {
+			-ms-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		to {
+			-ms-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-webkit-transform: rotate(360deg);
+			-o-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
 }
